--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "vite-plugin-static-copy": "^1.0.0"
   },
   "dependencies": {
-    "cesium": "^1.114.0"
+    "cesium": "^1.114.0",
+    "satellite.js": "^5.0.0"
   },
   "lint-staged": {
     "*.{js,html}": [
