* 衛星間を直線でつなぐ * 地球と重なるかチェック * .envからトークンを読み取る

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "cesium": "^1.114.0",
-    "satellite.js": "^5.0.0"
+    "satellite.js": "^5.0.0",
+    "vite-plugin-env-compatible": "^2.0.1"
   },
   "lint-staged": {
     "*.{js,html}": [
